turtleart.lessons.turtleart.Main.DiskFour.scala.error
Source:4: error: not found: value black
			case 1 => setCouleur(black)
                                             ^Source:5: error: not found: value red
			case 2 => setCouleur(red)
                                             ^Source:6: error: not found: value orange
			case 3 => setCouleur(orange)
                                             ^Source:7: error: not found: value purple
			case 4 => setCouleur(purple)
                                             ^