turtleart.lessons.turtleart.Main.DiskFour.scala.code
override def run() {
	for (c<-1 to 4) {
		c match {
			case 1 => setCouleur(black)
			case 2 => setCouleur(red)
			case 3 => setCouleur(orange)
			case 4 => setCouleur(purple)
		}
		for (i<-1 to 90) {
			avance(100)
			recule(100)
			droite(1)
		}
	}
}
